--- a/ZIP_reproduce_analysis.Rmd
+++ b/ZIP_reproduce_analysis.Rmd
@@ -9,10 +9,9 @@ output:
 \newcommand{\MIN}{\operatorname{MIN}}
 \newcommand{\MAX}{\operatorname{MAX}}
 \newcommand{\SLOPE}{\operatorname{SLOPE}}
-\newcommand{\IC50}{\operatorname{IC50}}
 \newcommand{\expp}[1]{\operatorname{exp\Bigl\{#1\Bigr\}}}
 \newcommand{\lnn}[1]{\operatorname{\ln\left(#1\right)}}
-\newcommand{\hill}[1]{\operatorname{\left(#1\right)}}
+\newcommand{\hill}[1]{\operatorname{Hill\left(#1\right)}}
 
 ```{r setup, include=FALSE}
 knitr::opts_knit$set(root.dir = file.path(getwd(), "scripts"))
@@ -321,7 +320,7 @@ If we fit $L.4$, then we will fit a Hill curve with $e^x$ rather than $x$ itself
 L.4(x) &= \MIN + \frac{\MAX - \MIN}{1 + \expp{\SLOPE \left( x - IC50 \right) }} \\
        &= \MIN + \frac{\MAX - \MIN}{1 + \expp{\SLOPE \left( \lnn{e^x} - \lnn{e^{IC50}} \right) }} \\
        &= \MIN + \frac{\MAX - \MIN}{1 + \expp{\SLOPE \left( \lnn{e^x} - \lnn{e^{IC50}} \right) }} \\
-       &= \MIN + \frac{\MAX - \MIN}{1 + \expp{ \lnn{ \Bigl( \frac{e^x}{e^{IC50}} \Bigr)^{\SLOPE} }} \\
+       &= \MIN + \frac{\MAX - \MIN}{1 + \expp{ \lnn{ \Bigl( \frac{e^x}{e^{IC50}} \Bigr)^{\SLOPE}}}} \\
        &= \MIN + \frac{\MAX - \MIN}{1 + \Bigl( \frac{e^x}{e^{IC50}} \Bigr)^{\SLOPE}}
 \end{align}
 which is different from the right form of the Hill equation. To see difference in their results:
